[gd_scene load_steps=5 format=2]

[ext_resource path="res://game/gui/Interface.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/src/Snake.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/main.gd" type="Script" id=3]
[ext_resource path="res://game/src/Fruit.tscn" type="PackedScene" id=4]

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="Snake" parent="." instance=ExtResource( 2 )]

[node name="Fruit" parent="." instance=ExtResource( 4 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2

[node name="Gui" type="CanvasLayer" parent="."]

[node name="Interface" parent="Gui" instance=ExtResource( 1 )]

[connection signal="dead_zone" from="." to="." method="_on_Main_dead_zone"]
[connection signal="area_entered" from="Snake" to="." method="_on_Snake_area_entered"]
[connection signal="area_entered" from="Fruit" to="." method="_on_Fruit_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
